--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -19,16 +19,28 @@
     color: white;
 }
 
-.experiences_twenty {
-    margin-top: -20vh;
-}
-
 @media (max-width: 623px) {
     .experiences_twenty {
         flex-direction: column;
         align-items: center;
         margin-top: 0;
     }
+
+    .twenty {
+        font-size: 9.75rem;
+    }
+}
+
+.firstLoading {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
+    z-index: 2;
+    justify-content: center;
+    align-items: center;
 }
 
 /* --------------------------------- Video Js  --------------------------------- */
